# gdal

./: .clang-format  .cmake-format.py  .cvsignore  .editorconfig  .flake8  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitpod.yml  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .zenodo.json  AGENTS.md  BUILDING.md  CITATION  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  COMMITERS  COMMITTERS  CONTRIBUTING.md  ChangeLog  Dockerfile  Doxyfile  Doxyfile.man  DoxygenLayout.xml  GDALmake.opt  GDALmake.opt.in  GNUmakefile  GOVERNANCE.md  HOWTO-RELEASE  LICENSE.TXT  LICENSE.txt  MANIFEST.in  MIGRATION_GUIDE.TXT  Makefile  NEWS  NEWS-1.x.md  (+51 more)
alg/: .cvsignore  CMakeLists.txt  GNUmakefile  armadillo_headers.h  contour.cpp  delaunay.c  fpolygonize.cpp  gdal_alg.h  gdal_alg_priv.h  gdal_crs.c  gdal_crs.cpp  gdal_homography.cpp  gdal_interpolateatpoint.cpp  gdal_interpolateatpoint.h  gdal_nrgcrs.c  gdal_octave.cpp  gdal_point_templ.h  gdal_rpc.cpp  gdal_simplesurf.cpp  gdal_simplesurf.h  gdal_tps.cpp  gdalapplyverticalshiftgrid.cpp  gdalchecksum.cpp  gdalcutline.cpp  gdaldither.cpp  gdalgenericinverse.cpp  gdalgenericinverse.h  gdalgeoloc.cpp  gdalgeoloc.h  gdalgeoloc_carray_accessor.h  gdalgeoloc_dataset_accessor.h  gdalgeolocquadtree.cpp  gdalgeolocquadtree.h  gdalgrid.cpp  gdalgrid.h  gdalgrid_priv.h  gdalgridavx.cpp  gdalgridder.cpp  gdalgridder.h  gdalgridsse.cpp  (+44 more)
apps/: .cvsignore  CMakeLists.txt  GNUmakefile  bench_ogr_batch.cpp  bench_ogr_c_api.cpp  commonutils.cpp  commonutils.h  dumpoverviews.cpp  gdal-config.in  gdal.cpp  gdal2ogr.c  gdal2raw.c  gdal_contour.cpp  gdal_contour_lib.cpp  gdal_create.cpp  gdal_footprint_bin.cpp  gdal_footprint_lib.cpp  gdal_grid.cpp  gdal_grid_bin.cpp  gdal_grid_lib.cpp  gdal_rasterize.cpp  gdal_rasterize_bin.cpp  gdal_rasterize_lib.cpp  gdal_translate.c  gdal_translate.cpp  gdal_translate_bin.cpp  gdal_translate_lib.cpp  gdal_utilities.dox  gdal_utils.h  gdal_utils_priv.h  gdal_viewshed.cpp  gdaladdo.cpp  gdalalg_abstract_pipeline.cpp  gdalalg_abstract_pipeline.h  gdalalg_clip_common.cpp  gdalalg_clip_common.h  gdalalg_compare_common.cpp  gdalalg_compare_common.h  gdalalg_convert.cpp  gdalalg_convert.h  (+402 more)
autotest/: .gitignore  CMakeLists.txt  GNUmakefile  README  README.md  asan_suppressions.txt  autotest_with_current_binary.sh  conftest.py  generate_parquet_test_file.py  generate_sample_gpkg.py  kml_generate_test_files.py  log  lsan_suppressions.txt  pytest.ini  pytest_runner.cpp  requirements.txt  run_all.py  run_slow_tests.sh  setup.cfg  setup_proj_db_tmpdir.py  test_random_tiff.py  ubsan_suppressions.txt  valgrind-gdal.supp  virtualenv-setup.sh
cmake/: CMakeLists.txt  ConfigUser.cmake  Makefile.am  Proj4Config.cmake  Proj4InstallPath.cmake  Proj4SystemInfo.cmake  Proj4Test.cmake  Proj4Version.cmake  project-config-version.cmake.in
doc/: .azure-pipelines.yml  .gitignore  CMakeLists.txt  Makefile  api.dox  build_doc_snapshot.sh  credits.dox  download.dox  environment.yml  faq.dox  gdal_building.dox  gdal_datamodel.dox  gdal_drivertut.dox  gdal_footer.html  gdal_polygonize.dox  gdal_proximity.dox  gdal_tutorial.dox  gdal_utilities.dox  generate-sponsor-logos.sh  generate_images.py  generate_pipeline_images.py  governance.dox  index.dox  index_raw.html  mkindex.py  old_trac_pointers.md  requirements.txt  sponsorship.dox  vb6_tutorial.dox  warptut.dox  wince_port.dox
frmts/: CMakeLists.txt  GNUmakefile  drivers.ini  formats_list.html  frmt_various.html  gdalallregister.cpp  makefile.vc
fuzzers/: CMakeLists.txt  build.sh  build_google_oss_fuzzers.sh  build_seed_corpus.sh  filename_fuzzer.cpp  fuzzingengine.cpp  gdal_algorithm_fuzzer.cpp  gdal_fuzzer.cpp  gdal_translate_fuzzer.cpp  gdal_vector_translate_fuzzer.cpp  get_jpeg2000_structure_fuzzer.cpp  gml_geom_import_fuzzer.cpp  ogr_fuzzer.cpp  osr_set_from_user_input_fuzzer.cpp  spatialite_geom_import_fuzzer.cpp  wkb_import_fuzzer.cpp  wkt_import_fuzzer.cpp
gcore/: .cvsignore  CMakeLists.txt  GNUmakefile  Version.rc  api.dox  download.dox  embedded_resources.c  embedded_resources.h  enviutils.cpp  examples.dox  faq.dox  gdal.h  gdal_abstractbandblockcache.h  gdal_adbc.cpp  gdal_adbc.h  gdal_asyncreader.h  gdal_avx2_emulation.hpp  gdal_building.dox  gdal_c_expr.cpp  gdal_c_expr.h  gdal_c_expr_parser.cpp  gdal_c_expr_parser.hpp  gdal_c_expr_parser.y  gdal_colortable.h  gdal_computedrasterband.h  gdal_cpp_functions.h  gdal_datamodel.dox  gdal_dataset.h  gdal_defaultoverviews.h  gdal_driver.h  gdal_drivermanager.h  gdal_drivertut.dox  gdal_frmts.h  gdal_fwd.h  gdal_gcp.h  gdal_geotransform.h  gdal_jit.cpp  gdal_jit_cpp.h  gdal_known_connection_prefixes.h  gdal_majorobject.h  (+123 more)
gdal/: .gitignore  CMakeLists.txt  COMMITERS  COMMITTERS  Doxyfile  DoxygenLayout.xml  GDALmake.opt.in  GNUmakefile  HOWTO-RELEASE  LICENSE.TXT  MIGRATION_GUIDE.TXT  NEWS  NEWS.md  NEWS.template  PROVENANCE.TXT  VERSION  Vagrantfile  aclocal.m4  autogen.sh  config.rpath  config.sub  configure  configure.ac  configure.in  gdal.pc.in  gdalnightlysvn.sh  generate_vcxproj.bat  install-sh  ltmain.sh  makefile.vc  makegdal.sln  makegdal.vcproj  makegdal10.vcxproj  makegdal10.vcxproj.filters  makegdal71.sln  makegdal71.vcproj  makegdal80.sln  makegdal80.vcproj  makegdal90.vcproj  makegdal_gen.bat  (+7 more)
gnm/: CMakeLists.txt  gnm.h  gnm_api.h  gnm_priv.h  gnmgenericnetwork.cpp  gnmgraph.cpp  gnmgraph.h  gnmlayer.cpp  gnmnetwork.cpp  gnmresultlayer.cpp  gnmrule.cpp
man/: CMakeLists.txt  GNUmakefile
nad/: Makefile.am  makefile.vc  testflaky  tv_out.dist
ogr/: .cvsignore  CMakeLists.txt  Doxyfile  GNUmakefile  GeometryIdl.idl  Makefile  SpatialReferenceIdl.idl  cpl_port.h  file.lst  generate_encoding_table.c  generate_swq_parser.cmake  gml2ogrgeometry.cpp  index.dox  makefile.vc  mitab_bounds.cpp  ogr2gmlgeometry.cpp  ogr2kmlgeometry.cpp  ogr2ogr.cpp  ogr_api.cpp  ogr_api.h  ogr_apitut.dox  ogr_arch.dox  ogr_capi_test.c  ogr_core.h  ogr_drivertut.dox  ogr_expat.cpp  ogr_expat.h  ogr_feature.h  ogr_feature_style.html  ogr_featurestyle.h  ogr_fromepsg.cpp  ogr_geo_utils.cpp  ogr_geo_utils.h  ogr_geocoding.cpp  (+144 more)
(+18845 files in other folders)
